# weaknet-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: FindLibEvent.cmake
docker/: Dockerfile
src/client/: client.cc  local.h
src/cmds/: client.cc  server.cc  version.h  weaknet-server.cpp
src/server/: remote.h  server.cc
src/share/: ProxyLocalClient.cpp  ProxyLocalClient.h  ProxyServer.cpp  ProxyServer.h  client.h  crypto.cc  crypto.h  crypto_aead.cc  crypto_aead.h  crypto_stream.cc  crypto_stream.h  debug.cc  debug.h  local.cc  local.h  network.cc  network.h  protocol.h  proxy_local_client.cc  proxy_local_client.h  proxy_server.cc  proxy_server.h  remote.cc  remote.h  stream.cc  stream.h  system.h  util.cc  util.h
